--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="./style.css">
   <title>Fullscreen Landing</title>
 </head>
-<body class="text header background">
-  <header class="header text">
-    <h1 class="text size">Welcome To The Beach</h1>
-    <p class="description" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod quidem, nihil iusto eveniet cumque?</p>
-    <button class="text button">Read more</button>
+<body>
+  <header class="header">
+    <h1 class="">Welcome To The Beach</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod quidem, nihil iusto eveniet cumque?</p>
+    <button class="btn">Read more</button>
      </header>
-     <main class="text">
+     <main class="container">
       <section class="section-a">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque necessitatibus ea corrupti fugiat optio quo officia laborum tempore fugit error distinctio repudiandae incidunt eius consequatur facere, quia voluptatibus excepturi? At quisquam quibusdam aspernatur similique optio sed, repudiandae nihil necessitatibus nobis, commodi nostrum beatae suscipit voluptate molestiae reiciendis minus voluptas distinctio aperiam voluptatem? Nobis vero atque harum molestias natus, nisi porro at sint repellat ut non, veritatis obcaecati ratione animi libero voluptates quod, eaque odio. Quidem, quasi ex a repellat tenetur soluta, omnis eius corrupti impedit magni laborum sunt consequatur. Velit repellendus quis numquam eius ipsum distinctio! Explicabo earum fugiat quibusdam eaque voluptates similique nemo laboriosam possimus. Cupiditate cumque dolorum optio quam, minus earum, excepturi eveniet fugiat corporis recusandae tempore nemo similique perferendis beatae, inventore error cum modi provident non ad magni! Quas consectetur ipsam ullam voluptatem? Porro a rerum, doloremque inventore ad deserunt placeat ullam, maxime excepturi sequi numquam! Cum.</p>
       </section>
