Add styles for all elements

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Fullscreen Landing</title>
 </head>
 <body>
   <header class="header">
-    <h1 class="">Welcome To The Beach</h1>
+    <h1>Welcome To The Beach</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod quidem, nihil iusto eveniet cumque?</p>
     <button class="btn">Read more</button>
      </header>
@@ -21,10 +21,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit illo voluptate ipsum adipisci dolore veniam asperiores dolorem molestiae atque doloribus? Voluptate quisquam voluptates nihil molestias eveniet dolorem cumque quis facilis sed? Soluta labore recusandae, molestiae quis esse obcaecati consequatur, quidem velit eius quisquam, doloribus inventore? Pariatur est molestias beatae corporis laudantium voluptas eligendi quis cum praesentium ut? Ipsum voluptatem rerum adipisci rem unde. Illum nisi, quae natus impedit modi et officia. Veniam esse in labore nisi error recusandae. Sequi mollitia reiciendis, enim quod, illo ea veniam earum repellendus inventore sunt quae. Ad doloribus amet hic. Cumque veritatis beatae voluptatibus laudantium amet, vero qui maiores tempora, delectus repudiandae excepturi ut quae. Voluptate voluptates excepturi voluptatum eaque ipsum ducimus fuga sapiente. Dolore explicabo repellat illo a fuga aperiam corrupti optio placeat natus modi facilis inventore sed quidem saepe ad veritatis minima sapiente ipsum necessitatibus, blanditiis esse? Tempora natus facere nesciunt quam necessitatibus.</p>
       </section>
       <section class="section-c">
-          <p class="box-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sit porro accusantium recusandae ratione, quod expedita! Tempora deserunt repellendus voluptatum?</p>
-          <p class="box-2">Quisquam mollitia earum iusto aliquid nesciunt dolore doloribus illo quam, repellendus molestiae. Optio aut cumque ducimus eos quibusdam laboriosam deserunt.</p>
-          <p class="box-3">Recusandae, ipsam. Magni reprehenderit mollitia facilis quasi fugiat a facere error excepturi similique, necessitatibus animi molestiae, accusantium, quisquam eaque voluptates!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sit porro accusantium recusandae ratione, quod expedita! Tempora deserunt repellendus voluptatum?</p>
+          <p>Quisquam mollitia earum iusto aliquid nesciunt dolore doloribus illo quam, repellendus molestiae. Optio aut cumque ducimus eos quibusdam laboriosam deserunt.</p>
+          <p>Recusandae, ipsam. Magni reprehenderit mollitia facilis quasi fugiat a facere error excepturi similique, necessitatibus animi molestiae, accusantium, quisquam eaque voluptates!</p>
       </section>
-     </main>
+    </main>
 </body>
 </html>
